unpackaged/main/default/objects/BeServe__c/BeServe__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>BeServe - BeDirect Clearing Service</description>
    <label>BeServe</label>
</CustomObject>