unpackaged/main/default/objects/BeServe__c/fields/endPoint__c.field-meta.xml
<CustomField>
    <fullName>endPoint__c</fullName>
    <label>endPoint</label>
    <length>40</length>
    <type>Text</type>
</CustomField>