unpackaged/main/default/objects/BeServe__c/fields/IdString__c.field-meta.xml
<CustomField>
    <fullName>IdString__c</fullName>
    <label>IdString</label>
    <length>12</length>
    <type>Text</type>
</CustomField>