unpackaged/main/default/objects/BeServe__c/fields/Kid__c.field-meta.xml
<CustomField>
    <fullName>Kid__c</fullName>
    <label>Kid</label>
    <length>5</length>
    <type>Text</type>
</CustomField>